[tool.poetry]
name = "digirock"
version = "0.1.0"
description = "A set of classes for making flexible digital rock models."
authors = ["Tony Hallam"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
