[project]
name = "digirock"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/digirock/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=dataicer --junitxml=pytest.xml --cov-report=term-missing:skip-covered"
testpaths = [
    "tests"
]