[metadata]
name = digirock
description = Flexible tool to create custom digital rock models.
long_description = file:README.md
long_description_content_type = text/markdown
authors = Tony Hallam
author_email = trhallam@gmail.com
url = https://github.com/trhallam/digirock/

license=MIT
licence_files=LICENSE

readme = README.md

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    xarray
    numpy
    scipy
    numba
    addict

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pandas
    numpy
    xarray

docs =
    mkdocs
    mkdocstrings
    mkdocs-material
    mkdocs-material-extensions
    mkdocs-simple-plugin
    mkdocs-jupyter
    mkautodoc
    jupyterlab
